OldArchive/d8c91c8bda469197bc10f1cee3e74b26-e434afe6909ff0e74aaeafde0a4175f3/output
+ g++-4.8 -std=c++0x -O2 -Wall -pedantic -pthread main.cpp
In file included from main.cpp:2:0:
/usr/include/c++/4.8/functional: In instantiation of 'static void std::_Function_base::_Base_manager<_Functor>::_M_clone(std::_Any_data&, const std::_Any_data&, std::false_type) [with _Functor = std::packaged_task<int()>; std::false_type = std::integral_constant<bool, false>]':
/usr/include/c++/4.8/functional:1946:51:   required from 'static bool std::_Function_base::_Base_manager<_Functor>::_M_manager(std::_Any_data&, const std::_Any_data&, std::_Manager_operation) [with _Functor = std::packaged_task<int()>]'
/usr/include/c++/4.8/functional:2457:19:   required from 'std::function<_Res(_ArgTypes ...)>::function(_Functor) [with _Functor = std::packaged_task<int()>; <template-parameter-2-2> = void; _Res = void; _ArgTypes = {}]'
main.cpp:10:36:   required from here
/usr/include/c++/4.8/functional:1910:34: error: use of deleted function 'std::packaged_task<_Res(_ArgTypes ...)>::packaged_task(const std::packaged_task<_Res(_ArgTypes ...)>&) [with _Res = int; _ArgTypes = {}]'
    __dest._M_access<_Functor*>() =
                                  ^
In file included from main.cpp:3:0:
/usr/include/c++/4.8/future:1367:7: error: declared here
       packaged_task(const packaged_task&) = delete;
       ^
